syntax = "proto3";

package announce.v1alpha;

message Announce {
  string name = 1;
  int32 id = 2;
}

service AnnounceCRUDService {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Add (AddRequest) returns (AddResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
  string name = 1;
  int32 id = 2;
}

message GetResponse {
  repeated Announce announces = 1;
}

message AddRequest {
  string name = 1;
  int32 power = 2;
}

message AddResponse {
  Announce announce = 1;
}
message UpdateRequest {
  string name = 1;
  int32 id = 2;
}

message UpdateResponse {
  Announce announce = 1;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  Announce announce = 1;
}
